--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/tcl/roselauncher/iflytek/JsonParser.java=UTF-8
+encoding//src/com/tcl/roselauncher/iflytek/Utils.java=UTF-8
 encoding/<project>=UTF-8
